feat: JWT 서비스 구현 및 Spring Security 기본 설정
- JWT 토큰 생성/검증 서비스 구현
- HMAC-SHA256 서명 알고리즘 사용
- Spring Security 기본 설정 추가
- 공개/보호 엔드포인트 구분

--- a/security-basic/src/main/resources/application.properties
+++ b/security-basic/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=security-basic
+
+## 기본 사용자명과 비밀번호 설정
+#spring.security.user.name=admin
+#spring.security.user.password=password123
+#spring.security.user.roles=ADMIN,USER
+
+jwt.secret=mySecretKey123456789012345678901234567890
+jwt.expiration=3600000
