feat: Spring Security 학습용 JWT 인증 구조 및 주석 보강 JWT 인증 구조 개선 및 학습용 주석 추가 roles 권한 처리 명확화, /token-verify 엔드포인트 추가 프로파일별 구조 및 예시 코드 정비

--- a/security-basic/src/main/resources/application.properties
+++ b/security-basic/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.application.name=security-basic
 #spring.security.user.password=password123
 #spring.security.user.roles=ADMIN,USER
 
-jwt.secret=mySecretKey123456789012345678901234567890
-jwt.expiration=3600000
+security.jwt.expiration=3600000
