--- a/security-basic/src/main/resources/application.properties
+++ b/security-basic/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=security-basic
-
 ## 기본 사용자명과 비밀번호 설정
 #spring.security.user.name=admin
 #spring.security.user.password=password123
 #spring.security.user.roles=ADMIN,USER
-
 security.jwt.expiration=3600000
+# Redis 기본 설정 (필요시 주석 해제 및 변경)
+spring.redis.host=localhost
+spring.redis.port=6379
+# spring.redis.password=
+# 프로파일 예시: web-redis 프로파일을 사용하면 Redis 기반 세션 사용
+# spring.profiles.active=web-redis
